# wasmedge_storage_interface

./: Cargo.toml  README.md  draft_serialisation_work_readme.md
src/: draft_object_serialisation_work.rs  lib.rs  native.rs
