[package]
name = "rust_storage_interface_library"
version = "0.1.0"
authors = ["tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"
readme = "https://github.com/second-state/rust_storage_interface_library/blob/master/README.md"
repository = "https://github.com/second-state/rust_storage_interface_library"

[lib]
name = "lib"
path = "src/lib.rs"
crate-type =["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"


