[package]
name = "rust_storage_interface_library"
version = "0.1.13"
authors = ["tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/second-state/rust_storage_interface_library"
license-file = "LICENSE"
description = "A Rust library that provides Rust to WebAssembly developers with syntax for load and store functionality"
[lib]
name = "lib"
path = "src/lib.rs"
crate-type =["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"


